samples/_failures_safe/1761485701_1cb7b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be5bd704.c: In function ‘main’:
./samples/SAFE/__tmp_be5bd704.c:136:9: error: expected expression at end of input
  136 |         if (fgets(input_buffer, sizeof(input_buffer), stdin) == NULL)
      |         ^~
./samples/SAFE/__tmp_be5bd704.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be5bd704.c:136:9: error: expected declaration or statement at end of input
